--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "nuxt": "^3.7.1"
+    "@nuxtjs/tailwindcss": "^6.8.0",
+    "daisyui": "^3.7.4",
+    "nuxt": "^3.7.3"
   }
 }
