--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "nuxt": "^3.7.3"
   },
   "dependencies": {
+    "@nuxt/image": "^1.0.0-rc.2",
     "@tailwindcss/typography": "^0.5.10"
   }
 }
