--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,12 @@
   },
   "dependencies": {
     "@nuxt/image": "^1.0.0-rc.2",
-    "@tailwindcss/typography": "^0.5.10"
+    "@pinia/nuxt": "^0.4.11",
+    "@tailwindcss/typography": "^0.5.10",
+    "@vueuse/core": "^10.4.1",
+    "pinia": "^2.1.6"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
