--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "daisyui": "^3.7.4",
-    "nuxt": "^3.7.3"
+    "nuxt": "^3.7.3",
+    "nuxt-icon": "^0.5.0"
   },
   "dependencies": {
     "@firebase/app-types": "^0.9.0",
