--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,19 @@ services:
     ports:
       - "4000:4000"
 
+  database:
+    image: 'mongo'
+    environment: 
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=test
+    ports:
+      - "7017:27017"
+    volumes:
+      - ./backend/files:/app/backend/files
+
   backend:
+    depends_on:
+      - database
     container_name: backend
     build:
       context: "./backend"
@@ -24,7 +36,13 @@ services:
     # Ensure that files folder is stored in the host machine, so data is not lost when the container is removed
     volumes:
       - ./backend/files:/app/backend/files
-    # depends_on:
-    #   - db
+    environment: 
+      - DB_HOST=database
+      - DB_NAME=amazing-ctf
+      - DB_PORT=27017
+      - DB_ROOT_USERNAME=root
+      - DB_PASSWORD=test
+    
+    
 
   # TODO: Decide the database and link it to the backend
