--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,17 +17,11 @@
     "nuxt-icon": "^0.5.0"
   },
   "dependencies": {
-    "@firebase/app-types": "^0.9.0",
     "@nuxt/image": "^1.0.0-rc.2",
     "@pinia/nuxt": "^0.4.11",
     "@tailwindcss/typography": "^0.5.10",
     "@vueuse/core": "^10.4.1",
-    "firebase": "^10.4.0",
-    "firebase-admin": "^11.10.1",
-    "firebase-functions": "^4.4.1",
-    "nuxt-vuefire": "^0.3.0",
-    "pinia": "^2.1.6",
-    "vuefire": "^3.1.17"
+    "pinia": "^2.1.6"
   },
   "overrides": {
     "vue": "latest"
