--- a/hacking/package.json
+++ b/hacking/package.json
@@ -14,6 +14,7 @@
     "nuxt": "^3.7.3"
   },
   "dependencies": {
-    "@nuxtjs/tailwindcss": "^6.8.0"
+    "@nuxtjs/tailwindcss": "^6.8.0",
+    "daisyui": "^3.8.3"
   }
 }
