Improved challenges API + Other
- Added extra necessary fields to challenges.
- Forced backend to first connect to the database before opening express server.
- Modified so files are stored in the root of the project and the folder is also mounted in the frontend.
- Docker compose now restarts services if they crash.
- Removed unnecessary mongo db init.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,13 @@ version: "3"
 services:
   frontend:
     container_name: frontend
+    restart: always
     build:
       context: "./frontend"
     ports:
       - "3000:3000"
+    volumes:
+      - ./data:/app/data
 
   hacking:
     container_name: hacking
@@ -28,23 +31,20 @@ services:
       - ./database:/data/db
 
   backend:
-    depends_on:
-      - database
     container_name: backend
+    restart: always
     build:
       context: "./backend"
     ports:
       - "5000:5000"
     # Ensure that files folder is stored in the host machine, so data is not lost when the container is removed
     volumes:
-      - ./backend/files:/app/backend/files
+      - ./data:/app/data
     environment: 
       - DB_HOST=database
       - DB_NAME=amazing-ctf
       - DB_PORT=27017
       - DB_ROOT_USERNAME=root
       - DB_PASSWORD=test
-    
-volumes:
-  mongodb_data:
-  # TODO: Decide the database and link it to the backend
+    depends_on:
+      - database
