--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
     "@nuxt/image": "^1.0.0-rc.2",
     "@pinia/nuxt": "^0.4.11",
     "@tailwindcss/typography": "^0.5.10",
+    "@vue-macros/nuxt": "^1.9.3",
     "@vueuse/core": "^10.4.1",
+    "@vueuse/nuxt": "^10.5.0",
     "pinia": "^2.1.6"
   },
   "overrides": {
