--- a/hacking/package.json
+++ b/hacking/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.8.0",
-    "daisyui": "^3.8.3"
+    "daisyui": "^3.8.3",
+    "party-js": "^2.2.0"
   }
 }
