Leaderboard bugfix + small improvements
- Found bug on the leaderboard with server fetching. For more information go to leaderboard.vue. After 4h of trying, I could not find solution a solution except removing server fetching.
- Improved pagination component, allowing user to specify page to load.
- Removed arrows from number inputs.
- Downgraded node version, as there seems to exist a bug with fetching on node 18.
- Improved docker-compose so it loads services in proper order.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,8 @@ services:
       - "3000:3000"
     volumes:
       - ./data:/app/data
+    depends_on:
+      - backend
 
   hacking:
     container_name: hacking
@@ -48,3 +50,5 @@ services:
       context: "./hacking"
     ports:
       - "4000:4000"
+    depends_on:
+      - backend
