--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,6 @@
     "mongoose": "^7.5.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
-    "serve-favicon": "^2.5.0",
-    "sharp": "^0.32.6"
+    "serve-favicon": "^2.5.0"
   }
 }
