created all pages for password hack

--- a/hacking/package.json
+++ b/hacking/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.8.0",
     "daisyui": "^3.8.3",
-    "party-js": "^2.2.0"
+    "party-js": "^2.2.0",
+    "text-encrypter": "^1.1.0"
   }
 }
