--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@vue-macros/nuxt": "^1.9.3",
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.5.0",
+    "party-js": "^2.2.0",
     "pinia": "^2.1.6"
   },
   "overrides": {
