--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.5.0",
     "party-js": "^2.2.0",
-    "pinia": "^2.1.6"
+    "pinia": "^2.1.6",
+    "text-encrypter": "^1.1.0"
   },
   "overrides": {
     "vue": "latest"
