Audit fix + Docker fix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,11 +42,11 @@ services:
     depends_on:
       - backend
 
-  hacking:
-    container_name: hacking
-    build:
-      context: "./hacking"
-    ports:
-      - "4000:4000"
-    depends_on:
-      - backend
+  # hacking:
+  #   container_name: hacking
+  #   build:
+  #     context: "./hacking"
+  #   ports:
+  #     - "4000:4000"
+  #   depends_on:
+  #     - backend
